tests/negative/Termination/Axiom.juvix
module Axiom;

axiom A : let
            x (y : Type) : Type := x y;
          in x;
